...
        android:layout_weight="4"
        android:contentDescription="@string/descr_search_bar"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.cliqz.browser.widget.AutocompleteEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_medium"
            android:drawableRight="@drawable/ic_action_delete"
            android:focusable="true"
            android:focusableInTouchMode="true"
...
