...
        android:padding="@dimen/toolbar_menu_item_padding"
        app:srcCompat="@drawable/ic_dashboard_on"
        android:background="@color/transparent"
        android:scaleType="fitCenter"/>

    <FrameLayout
        android:id="@+id/overflow_menu"
        android:layout_width="40dp"
        android:layout_height="@dimen/toolbar_menu_item_h"
        android:background="?attr/actionBarItemBackground">

        <ImageView
            android:id="@+id/overflow_menu_icon"
...
