...
    <string name="faq_system_dialogs_title">Connection warning and notification sound</string>
    <string name="translationby">English translation by Arne Schwabe&lt;arne@rfc2549.org&gt;</string>
    <string name="ipdns">IP and DNS</string>
    <string name="basic">Basic</string>
    <string name="routing">Routing</string>
    <string name="obscure">Obscure OpenVPN Settings. Normally not needed.</string>
    <string name="advanced">Advanced</string>
    <string name="export_config_title">ICS Openvpn Config</string>
    <string name="warn_no_dns">No DNS servers being used. Name resolution may not work. Consider setting custom DNS Servers. Please also note that Android will keep using your proxy settings specified for your mobile/Wi-Fi connection when no DNS servers are set.</string>
    <string name="dns_add_error">Could not add DNS Server \"%1$s\", rejected by the system: %2$s</string>
    <string name="ip_add_error">Could not configure IP Address \"%1$s\", rejected by the system: %2$s</string>
    <string name="faq_howto">&lt;p&gt;Get a working config (tested on your computer or download from your provider/organisation)&lt;/p&gt;&lt;p&gt;If it is a single file with no extra pem/pkcs12 files you can email the file yourself and open the attachment. If you have multiple files put them on your sd card.&lt;/p&gt;&lt;p&gt;Click on the email attachment/Use the folder icon in the vpn list to im
    <string name="faq_howto_title">Quick Start</string>
...
